--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "editorjs-inline-font-size-tool",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "keywords": [
     "codex editor",
     "font-size",
@@ -18,7 +18,7 @@
   "scripts": {
     "test": "electron-mocha --renderer --color --no-timeouts --require-main=./test-electron-main.js"
   },
-  "dependencies": {
+  "devDependencies": {
     "@editorjs/editorjs": "^2.30.7",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/user-event": "^14.5.2",
